--- a/lesson2.html
+++ b/lesson2.html
@@ -73,7 +73,7 @@ pre code {
           <h5 class="pt-3">Comandos</h5>
           <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link" href="#" onclick="loadMarkdown('conteudos/linhadecomando/cd.pwd')">cd</a>
+                <a class="nav-link" href="#" onclick="loadMarkdown('conteudos/linhadecomando/cd.md')">cd</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" onclick="loadMarkdown('conteudos/linhadecomando/ls.md')">ls</a>
