--- a/lesson2.html
+++ b/lesson2.html
@@ -55,7 +55,7 @@
           <a class="nav-link" href="#" onclick="loadMarkdown('conteudos/linhadecomando/find.md')"><img src="assets/setas.svg" style="width: 16px; height: 16px; margin-right: 5px;" alt=">>">find</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link" href="#" onclick="loadMarkdown('conteudos/linhadecomando/help.md')"><img src="assets/setas.svg" style="width: 16px; height: 16px; margin-right: 5px;" alt=">>">help</a>
+          <a class="nav-link" href="#" onclick="loadMarkdown('conteudos/linhadecomando/man.md')"><img src="assets/setas.svg" style="width: 16px; height: 16px; margin-right: 5px;" alt=">>">man</a>
           </li>
 
             <!-- Adicione mais links conforme necessário -->
