--- a/lesson2.html
+++ b/lesson2.html
@@ -19,6 +19,7 @@
           
           <ul class="nav flex-column">
             <li class="nav-item">
+              <a class="nav-link" href="#" onclick="loadMarkdown('conteudos/linhadecomando/pwd.md')"><img src="assets/setas.svg" style="width: 16px; height: 16px; margin-right: 5px;" alt=">>">pwd</a>
               <a class="nav-link" href="#" onclick="loadMarkdown('conteudos/linhadecomando/cd.md')"><img src="assets/setas.svg" style="width: 16px; height: 16px; margin-right: 5px;" alt=">>">cd</a>
             </li>
             <li class="nav-item">
