--- a/lesson2.html
+++ b/lesson2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LinuxTecLab</title>
+  <title>LinuxTecLab.</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
@@ -21,6 +21,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#" onclick="loadMarkdown('conteudos/linhadecomando/pwd.md')"><img src="assets/setas.svg" style="width: 16px; height: 16px; margin-right: 5px;" alt=">>">pwd</a>
               <a class="nav-link" href="#" onclick="loadMarkdown('conteudos/linhadecomando/cd.md')"><img src="assets/setas.svg" style="width: 16px; height: 16px; margin-right: 5px;" alt=">>">cd</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" onclick="loadMarkdown('conteudos/linhadecomando/ls.md')"><img src="assets/setas.svg" style="width: 16px; height: 16px; margin-right: 5px;" alt=">>">ls</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" onclick="loadMarkdown('conteudos/linhadecomando/ls.md')"><img src="assets/setas.svg" style="width: 16px; height: 16px; margin-right: 5px;" alt=">>">ls</a>
