--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <!-- Page Features-->
                 <div class="row gx-lg-5">
                     <div class="col-lg-6 col-xxl-4 mb-5">
-                        <a href="lesson1.html" class="card-link">
+                        <a href="conteudos/linhadecomando/lesson.html" class="card-link">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><img src="assets/terminal.jpeg" class="img-fluid" alt="Imagem responsiva"></div>
@@ -60,7 +60,7 @@
                     </a>
                     </div>
                     <div class="col-lg-6 col-xxl-4 mb-5">
-                        <a href="lesson2.html" class="card-link">
+                        <a href="conteudos/artedotexto/lesson.html" class="card-link">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><img src="assets/vim.png" class="img-fluid w-150" alt="Imagem responsiva"></div>
@@ -71,6 +71,7 @@
                     </a>   
                     </div>
                     <div class="col-lg-6 col-xxl-4 mb-5">
+                        <a href="conteudos/manipulacao-de-usuario/lesson.html" class="card-link"></a>
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><img src="assets/users.jpeg" class="img-fluid w-150" alt="Imagem responsiva"></div>
@@ -80,6 +81,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-xxl-4 mb-5">
+                        <a href="conteudos/processos/lesson.html" class="card-link"></a>
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><img src="assets/permissoes.jpeg" class="img-fluid w-150" alt="Imagem responsiva"></div>
