--- a/conteudos/artedotexto/lesson.html
+++ b/conteudos/artedotexto/lesson.html
@@ -7,7 +7,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
-  <link href="css/stylesaux.css" rel="stylesheet" />
+  <link href="../../css/stylesaux.css" rel="stylesheet" />
 </head>
 <body>
   <div class="container-fluid">
@@ -15,11 +15,11 @@
       <!-- Sidebar Esquerda: Links dos Comandos -->
       <nav class="col-md-2 sidebar-left">
         <div class="position-sticky" id="menu">
-            <a href="index.html" class="btn btn-primary home-btn">Home</a>
+            <a href="../../index.html" class="btn btn-primary home-btn">Home</a>
           
             <script>
              
-             fetch('conteudos/artedotexto/links.json')
+             fetch('links.json')
              .then(response => {
                 if (!response.ok) {
                 throw new Error('Erro ao carregar o JSON');
