--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </a>   
                     </div>
                     <div class="col-lg-6 col-xxl-4 mb-5">
-                        <a href="conteudos/manipulacao-de-usuario/lesson.html" class="card-link"></a>
+                        <a href="conteudos/manipulacao-de-usuario/lesson.html" class="card-link">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><img src="assets/users.jpeg" class="img-fluid w-150" alt="Imagem responsiva"></div>
@@ -79,9 +79,10 @@
                                 <p class="mb-0">Aprenda a administrar os usuários e seus papéis no sistema </p>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="col-lg-6 col-xxl-4 mb-5">
-                        <a href="conteudos/processos/lesson.html" class="card-link"></a>
+                        <a href="conteudos/processos/lesson.html" class="card-link">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><img src="assets/permissoes.jpeg" class="img-fluid w-150" alt="Imagem responsiva"></div>
@@ -89,8 +90,10 @@
                                 <p class="mb-0">Aprenda sobre o sistema de permissões no linux.</p>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="col-lg-6 col-xxl-4 mb-5">
+                        <a href="conteudos/processos/lesson.html" class="card-link"></a>
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><img src="assets/processos.jpeg" class="img-fluid w-150" alt="Imagem responsiva"></div>
@@ -98,6 +101,7 @@
                                 <p class="mb-0">Aprenda a domar o sistema, gerenciado os processos!</p>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
